# entaENGELment-

./: .bandit.yaml  .gitignore  ANTI_CAPTURE_POLICY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EPISTEMIC_HYGIENE.md  GITHUB_USE_POLICY.md  Index.html  LICENSE_REVIEW.md  Makefile  NOTICE  PRIVACY_BOUNDARY.md  README.md  REFACTOR_NOTES.md  REPOSITORY_ESSENZ_ANALYSE.md  SECURITY.md  SYNTHBIOSIS.md  VOIDMAP.yml  WELCOME.md  adapters   ark_cephalo_manifest_v2.json  electron-url-policy.js  hardware_requirements_summary.md  jest.config.js  main.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.js  pyproject.toml  requirements-dev.txt  requirements.txt  resonance_checkpoint.yaml  setup.py  src  tests  (+3 more)
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Fractalsense/: README.md  __init__.py  access_information.md  android_packaging_guide.md  app.js  app.min.js  color_generator.py  config.json  deployment_requirements.md  detailed_response.md  documentation.md  feasibility_analysis.md  fractal-visualizer.js  fractal-visualizer.min.js  implementation_guidance.md  index.html  integration.py  main.py  maintenance_procedures.md  modular_app_structure.py  netlify.toml  practical_next_steps.md  presentation-mode.js  presentation_guide.md  project_analysis.md  requirements-dev.txt  resonance-enhancer.js  sensor-simulator.js  sound_generator.py  styles.css  styles.min.css  test_resonance.py  todo.md  user_manual.md  visual_demonstration_script.md  web_interface_mockup.html  web_prototype_requirements.txt
INBOX/: INTAKE-2026-07-15-fable-master-prompt-rohsediment.md  INTAKE-2026-07-21-synthbiosis-system-atlas-v1_1.md  README.md
NICHTRAUM/: README.md
TASKS/: _template.md
__tests__/: setup.js
adapters/: msi_adapter_v1.yaml
aggregates/: acm_news_latest_citation_lag_28d.json  acm_zahlen_date_math_28d.json
audit/: ACTION_PLAN.md  CONCLUSION.md  DEEP_AUDIT_REPORT_20260117.md  DUPLICATES.md  FILE_MANIFEST.csv  FOKUS_BACKFILL.md  INVENTORY.md  METATRON_COMPLIANCE_BACKLOG.md  MISSING_FILES.md  SECURITY_NOTES.md  SESSION.yaml  STRUCTURE_MAP.md  SWOT.md  VERIFY_MATRIX.md  WORKFLOW_AUDIT.md  all_files.txt  audit_matrix.yaml  audit_scope.yaml  check_annex.py  consistency_check.py  consistency_report.json  dependency_audit_2026-01-05.md  file_structure.txt  metatron_violations.txt  port_matrix_audit_2026-01-13.md  ts_errors.txt
bio_spiral_viewer/: __init__.py  cli.py  data_models.py  loader.py  metrics.py  viewer.py
cards/: README.md
dashboard/: overview_confab.json
diagrams/: monorepo-topology.md
docs/: LEDGER_SPEC.md  ORBIT_MODEL.md  PHASE0_SKELETON.md  PROJECT_CONSTELLATION_MAP_v0_1.md  ROADMAP_ORBITAL_v1.md  START_HERE.md  architecture.md  bio_spiral_viewer.md  canvas_links.md  devops_tooling_kit.md  devops_tooling_kit_annex.md  dual_dokument_wrap_kontextfenster_scanner.md  fieldtest  masterindex.md  negations.md  triad_fill_template.md  triad_topology.md  voids_backlog.md
index/: COMPACT_INDEX_v3.yaml  ENTAENGELMENT_INDEX_v3_FUNCTORIAL.yaml
ledger/: RECEIPT_SCHEMA.json  __init__.py  replay_determinism.py
lyra/: ledger_T1_1_commit_REAL.json  lyra_T1_1_explain_snapshot_REAL.json  lyra_T1_1_real.csv  lyra_T1_1_scan_report_REAL.md  (+3 more)
(+380 files in other folders)
